# TRExplorer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TRExplorer.sln  windows_cross.cmake
DirectXTex/lib/: DirectXTex.lib
MeshPlugin/: CMakeLists.txt  MeshPlugin.cpp  MeshPlugin.h  MeshPlugin.vcxproj  MeshPlugin.vcxproj.filters  tinyxml2.cpp  tinyxml2.h
PluginTest/: CMakeLists.txt  PluginTest.cpp
ROTRExplorer/: ROTRExplorer.vcxproj  main.cpp  test.txt
TRExplorer/: CrashDump.cpp  CrashDump.h  DDS.cpp  DDS.h  DDSLoader.cpp  DDSLoader.h  DDSTex.cpp  DDSTex.h  MyFrame.cpp  MyFrame.h  PluginInterface.h  PluginList.txt  Scene.cpp  Scene.h  TRExplorer.vcxproj  TRExplorer.vcxproj.filters  alldef.h  cdrm.cpp  cdrm.h  crc32.cpp  crc32.h  element.cpp  element.h  filelist.txt  filelist2.txt  gui.cpp  gui.h  hash.txt  main.cpp  mesh.mesh  patch.cpp  patch.h  thumbnailctrl.cpp  thumbnailctrl.h  tiger.cpp  tiger.h
TRExplorer/output/212/: 0.cdrm
TRExplorer/output/212/0/: 0.dds
TRExplorer/tmp - Copy/07e0066c/: 0.dds
TRExplorerGUI/: App.config  App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  TRExplorerGUI.csproj
TRExplorerGUI/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs  Settings.settings
TexturePlugin/: CMakeLists.txt  DDSLoader.cpp  DDSLoader.h  TextureHeader.cpp  TextureHeader.h  TexturePlugin.cpp  TexturePlugin.h  TexturePlugin.vcxproj  TexturePlugin.vcxproj.filters
include/: PluginInterface.h
zlib/lib/: zlibwapi.exp  zlibwapi.lib
